--- a/pages/recipes_tips.html
+++ b/pages/recipes_tips.html
@@ -29,7 +29,8 @@
               <a class="nav-item nav-link" href="pages/hotSpots.html">
                       Hot Spots</a>
               <a class="nav-item nav-link active" href="pages/recipes_tips.html">
-                      Recipes & Tips<span class="sr-only">(current)</a>
+                      Recipes & Tips
+                      <span class="sr-only">(current)</a>
               <a class="nav-item nav-link" href="pages/reviews.html">
                       Reviews</span></a>
             </div>
