--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -26,7 +26,8 @@
               <a class="nav-item nav-link" href="pages/recipes_tips.html">
                       Recipes & Tips</a>
               <a class="nav-item nav-link active" href="pages/reviews.html">
-                      Reviews<span class="sr-only">(current)</span></a>
+                      Reviews
+                      <span class="sr-only">(current)</span></a>
             </div>
          </div>
         </nav>
