Linking error changed

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -21,7 +21,7 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="../index.html">
                       Home</a>
-              <a class="nav-item nav-link" href="pages/hotSpots.html">
+              <a class="nav-item nav-link" href="pages/hotSpot.html">
                       Hot Spots</a>
               <a class="nav-item nav-link" href="pages/recipes_tips.html">
                       Recipes & Tips</a>
