--- a/pages/hotSpot.html
+++ b/pages/hotSpot.html
@@ -16,7 +16,7 @@
             GrubSpot 101 Homepage
             </a>
             </li>
-            <li><a href="pages/hotSpots.html">Hot Spots</a></li>
+            <li><a href="pages/hotSpot.html">Hot Spots</a></li>
             <li><a href="pages/recipes_tips.html">Kitchen Tips</a></li>
             <li><a href="pages/reviews.html">Reviews</a></li>
       </ul>
