--- a/pages/recipes_tips.html
+++ b/pages/recipes_tips.html
@@ -26,7 +26,7 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="../index.html">
                       Home</a>
-              <a class="nav-item nav-link" href="pages/hotSpots.html">
+              <a class="nav-item nav-link" href="pages/hotSpot.html">
                       Hot Spots</a>
               <a class="nav-item nav-link active" href="pages/recipes_tips.html">
                       Recipes & Tips
