Linking error changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="pages/hotSpots.html">Hot Spots</a>
+      <a class="nav-item nav-link" href="pages/hotSpot.html">Hot Spots</a>
       <a class="nav-item nav-link" href="pages/recipes_tips.html">Recipes & Tips</a>
       <a class="nav-item nav-link" href="pages/reviews.html">Reviews</a>
     </div>
