index and hotSpot pages complete

--- a/pages/hotSpot.html
+++ b/pages/hotSpot.html
@@ -7,22 +7,70 @@
         <link rel= "stylesheet" type = "text/css" href = "../css/hotSpot.css">
         
     </head>
-    <title>801 Grub Spot</title>
+    <title>Grub 101 Spot</title>
   <section class="hotSpot-body">
-    <nav>
-      <ul>
-        <li> <a href="index.html">
-          <img src="../css/img/Logo_1.jpg" alt = "G101" width = "30px">
-            GrubSpot 101 Homepage
-            </a>
-            </li>
-            <li><a href="pages/hotSpot.html">Hot Spots</a></li>
-            <li><a href="pages/recipes_tips.html">Kitchen Tips</a></li>
-            <li><a href="pages/reviews.html">Reviews</a></li>
-      </ul>
-  </nav>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="../index.html">
+      <img src="../css/img/Logo_1.jpg" alt = "G101" width = "30px">
+                          GrubSpots 101
+                         </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="pages/hotSpot.html">Hot Spots</a>
+      <a class="nav-item nav-link" href="pages/recipes_tips.html">Recipes & Tips</a>
+      <a class="nav-item nav-link" href="pages/reviews.html">Reviews</a>
+    </div>
+  </div>
+</nav>
 <body>
+  <div class="hotSpot-header">
   <h1 class="h1-hotSpot">Hot Spots</h1>
+  </div>
+  <section class = "hotSpot-cards">
+    
+   <div class="row card1">
+        <div class="card cardcss">
+      <img class="card-img-top" src="../css/img/Burger.jpg" alt="Card image cap" height=65% width=auto>
+      <div class="card-body">
+        <h5 class="card-title">Seven Brothers Burgers</h5>
+        <p class="card-text">Originating on the Hawaiian Island of Oahu, This fresh take on American Classic food is a hit. You can't go wrong with their Shem Burger (Bacon Guacamole), with a side of fries and Nutella shake! make sure to try their homemade fry sause, it's to die for!</p>
+        <a href="https://www.sevenbrothersburgers.com/" target=blank class="btn btn-primary">Check out Their website</a>
+      </div>
+    </div>
+  </div>
+  
+   <div class="row card1">
+        <div class="card cardcss">
+      <img class="card-img-top" src="../css/img/Tacos.jpg" alt="Card image cap" height=65% width=auto>
+      <div class="card-body">
+        <h5 class="card-title">Maria Bonita's Mexican Grill</h5>
+        <p class="card-text">If you are in search of not only authentic mexican food, but also an authentic mexican experience, be sure to visit Maria Bonita's Mexican Grill in Orem. From their classic tacos to the enchiladas, you are sure to find a entree that will meet your below the border needs!</p>
+        <a href="https://www.google.com/search?q=maria+bonita+mexican+grill&oq=maria&aqs=chrome.0.69i59j69i57j69i59j0l3.974j0j9&sourceid=chrome&ie=UTF-8" target= blank class="btn btn-primary">Click here for more info</a>
+      </div>
+    </div>
+  </div>
+  
+   <div class="row card1">
+        <div class="card cardcss">
+      <img class="card-img-top" src="../css/img/Fettuccine.jpg" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Gloria's Little Italy</h5>
+        <p class="card-text">Okay pasta lovers, here is the next place you need to try. Gloria's is an overall excellent experience with amazing classic Itallian dishes to great Itallian entertainment. Not to mention that their portions sizes are large enough to share, or to take home for a midnight snack.</p>
+        <a href="http://www.gloriaslittleitaly.com/" target=blank class="btn btn-primary">Check out Their website</a>
+      </div>
+    </div>
+  </div>
+  </section>
+  <footer> <a href="https://github.com/parkermurray21/creative-project-1" target=blank>Github.com</a></footer>
+  
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+
+
 
 </html>
