--- a/pages/hotSpot.html
+++ b/pages/hotSpot.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "../css/style.css">
         <link rel = "stylesheet" type = "text/css" href = "../css/Grid.css">
         <link rel= "stylesheet" type = "text/css" href = "../css/nav.css">
         <link rel= "stylesheet" type = "text/css" href = "../css/hotSpot.css">
@@ -10,21 +10,27 @@
     <title>Grub 101 Spot</title>
   <section class="hotSpot-body">
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="../index.html">
-      <img src="../css/img/Logo_1.jpg" alt = "G101" width = "30px">
+            <a class="navbar-brand" href="../index.html">
+                 <img src="../css/img/Logo_1.jpg" alt = "G101" width = "30px">
                           GrubSpots 101
                          </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="pages/hotSpot.html">Hot Spots</a>
-      <a class="nav-item nav-link" href="pages/recipes_tips.html">Recipes & Tips</a>
-      <a class="nav-item nav-link" href="pages/reviews.html">Reviews</a>
-    </div>
-  </div>
-</nav>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link" href="../index.html">
+                      Home</a>
+              <a class="nav-item nav-link active" href="hotSpot.html">
+                      Hot Spots<span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link" href="recipes_tips.html">
+                      Recipes & Tips</a>
+              <a class="nav-item nav-link" href="reviews.html">
+                      Reviews
+                      </a>
+            </div>
+         </div>
+        </nav>
 <body>
   <div class="hotSpot-header">
   <h1 class="h1-hotSpot">Hot Spots</h1>
